--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    api "io.vertx:vertx-web:3.8.5"
+    implementation "io.vertx:vertx-web:3.8.5"
 }
 compileKotlin {
     kotlinOptions {
